# asset_repo_backend

./: .gitignore  architecture.excalidraw  categories.py  main.py  models.py  pyproject.toml
assets/: unstoppable_stories_tracker_sample.csv
services/: llm.py  ppt.py  startup.py
services/db/: base.py  sqlite.py
