[project]
name = "asset-repo-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "python-pptx>=1.0.2",
    "uvicorn>=0.48.0",
]
